Fix: server now checking if it should create new file version or not
