# CloudDrive.WebAPI/Controllers/DirectoriesController.cs
@@ -68,7 +68,8 @@ namespace CloudDrive.WebAPI.Controllers
 
                 var resp = new UpdateDirectoryResponse
                 {
-                    NewFileVersionInfo = result
+                    NewFileVersionInfo = result.ActiveFileVersion,
+                    Changed = result.Changed
                 };
 
                 return Ok(resp);
