# CloudDrive.WebAPI/Model/UpdateFileResponse.cs
@@ -5,5 +5,6 @@ namespace CloudDrive.WebAPI.Model
     public class UpdateFileResponse
     {
         public required FileVersionDTO NewFileVersionInfo { get; set; }
+        public required bool Changed { get; set; }
     }
 }
